# great-tit-hits-setup

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: pipeline.md
greti/: io.py  plot.py  utils.py  wrangle.py
resources/birds/: broods-readme.md  broods.csv  ebmp_broods_2020.csv  ebmp_morphometrics.csv  ebmp_nestboxes.csv  main.csv  morphometrics.csv  nestboxes.csv  times.csv
resources/wytham_map/: perimeter.dbf  perimeter.shp  perimeter.shx
scripts/: 0.1-broods.py  0.2-morphometrics.py  0.3-nestboxes.py  0.4-assign-recordings.py  0.5-link-metadata.py  0.6-first-morning-song.py  1.0-segment-data.py  10.0-share-dataset.py  2.0-prepare-dataset.py  3.0-check-dataset.py  3.0-review-dataset.py  5.0-export-train-set.py  5.1-export-img-set.py  6.0-link-all.py  6.0-mv-link-all.py  7.0-validate-segs.py  config.py  perimeter.py  plot-general-figs.py  plot-song-time-date.py  plot-song-vs-laydate-2d.py  plot-song-vs-laydate.py  plot-spectrograms.py
scripts/auxiliary.py/: build_xmls.py  copy_xml.py
